# MEDI

./: .gitignore  README.md  pyproject.toml  tmpclaude-c38d-cwd
backend/: logger.py  main.py  requirements.txt  startup_log.txt
backend/middlewares/: exception_handler.py
backend/modules/: api_answer_chain.py  confidence_scorer.py  drug_interaction_checker.py  evaluation.py  llm.py  load_vectorstore.py  medical_api.py  ocr.py  pdf_handlers.py  prescription_parser.py  query_handlers.py  retrieval.py  session_store.py
backend/routes/: ask_prescription.py  ask_question.py  upload_pdf.py  upload_prescription.py
backend/tests/: ocr_evaluation_report.json  run_all_tests.py  test_api_endpoints.py  test_evaluation.py  test_gpu_and_imports.py  test_llm.py  test_ocr.py  test_ocr_evaluation.py  test_parser.py  test_pinecone.py  test_prescription_pipeline.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatArea.jsx  FileUpload.jsx  Message.jsx  PrescriptionChat.jsx  PrescriptionUpload.jsx
frontend/src/services/: api.js
