[project]
name = "medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.8",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.11",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "loguru>=0.7.3",
    "pinecone>=8.0.0",
    "pydantic>=2.12.5",
    "pypdf>=6.7.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.40.0",
]
